# riichi-scoring-trainer-bot

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: hand_score.rs  json_file_updater.rs  main.rs  telegram_bot.rs  translations.rs  user_settings.rs  user_state.rs  user_state_updaters.rs
