[package]
name = "telegram-riichi-scoring-trainer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["std", "std_rng"], default-features = false }
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler", "teloxide-macros", "native-tls"], default-features = false }
log = { version = "0.4", default-features = false }
pretty_env_logger = { version = "0.5", default-features = false }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"], default-features = false }
dashmap = { version = "6.1", features = ["serde"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
